kubes_airflow_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bearing-pyventive-airflow-deployment
  labels:
    app: bearing-pyventive-airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bearing-pyventive-airflow
  template:
    metadata:
      labels:
        app: bearing-pyventive-airflow
    spec:
      containers:
      - name: bearing-pyventive-airflow
        image: apache/airflow:latest
        ports:
        - containerPort: 8080


---

apiVersion: v1
kind: Service
metadata:
  name: bearing-pyventive-airflow
  labels:
    app: bearing-pyventive-airflow
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bearing-pyventive-airflow
