kubes_api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bearing-pyventive-deployment
  labels:
    app: bearing-pyventive-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bearing-pyventive-api
  template:
    metadata:
      labels:
        app: bearing-pyventive-api
    spec:
      containers:
      - name: bearing-pyventive-api
        image: yann112/bearing_pyventive:1.0.0
        ports:
        - containerPort: 8000


---

apiVersion: v1
kind: Service
metadata:
  name: bearing-pyventive-api
  labels:
    app: bearing-pyventive-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: bearing-pyventive-api

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bearing-pyventive-api
spec:
  defaultBackend:
    service:
      name: bearing-pyventive-api
      port:
        number: 8000
