kubes_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bearing-pyventive-api
spec:
  defaultBackend:
    service:
      name: bearing-pyventive-api
      port:
        number: 8000
